--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^5.3.4",
     "react-toastify": "^9.1.3",
     "redux": "^5.0.0",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
