--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.2",
     "react-router-dom": "^5.3.4",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "redux": "^5.0.0",
     "redux-thunk": "^3.1.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
