--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "redux": "^5.0.0",
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
