--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
-    "react-redux": "^9.0.2",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^5.3.4",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "redux": "^5.0.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
