--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-gravatar": "^2.6.3",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
