--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.3.4",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "react-transition-group": "^4.4.5",
     "redux": "^5.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
