--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-gravatar": "^2.6.3",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^5.3.4",
     "react-slick": "^0.29.0",
