--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.5",
     "axios": "^1.6.2",
     "react": "^18.2.0",
+    "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-gravatar": "^2.6.3",
     "react-hook-form": "^7.49.2",
